--- a/nginx-sogo.conf
+++ b/nginx-sogo.conf
@@ -59,3 +59,11 @@ location ^~ /SOGo/Microsoft-Server-ActiveSync {
         proxy_pass http://127.0.0.1:20000/SOGo/Microsoft-Server-ActiveSync;
         proxy_redirect http://127.0.0.1:20000/SOGo/Microsoft-Server-ActiveSync /;
 }
+
+location = /.well-known/carddav {
+	return 301 $scheme://$host/SOGo/dav;
+}
+
+location = /.well-known/caldav {
+	return 301 $scheme://$host/SOGo/dav;
+}
