Enable sieve plugin
Signed-off-by: Bernhard Rosenkränzer <bero@lindev.ch>

--- a/20-lmtp.conf
+++ b/20-lmtp.conf
@@ -15,6 +15,6 @@
 
 protocol lmtp {
   # Space separated list of plugins to load (default is global mail_plugins).
-  #mail_plugins = $mail_plugins
+  mail_plugins = $mail_plugins sieve
 }
 			  
