--- a/90-sieve.conf
+++ b/90-sieve.conf
@@ -15,7 +15,7 @@ plugin {
 	imapsieve_mailbox2_causes = COPY
 	imapsieve_mailbox2_before = file:/srv/mail/sieve/global/rspamd-learn-ham.sieve
 
-	sieve_pipe_bin_dir = /etc/dovecot/sieve
+	sieve_pipe_bin_dir = /usr/share/dovecot/sieve
 	sieve_global_extensions = +vnd.dovecot.pipe
 
 	stats_refresh = 30 secs
