--- a/sogo.conf
+++ b/sogo.conf
@@ -25,6 +25,7 @@
 
 	SOGoPageTitle = "OpenMandriva Mail Server";
 	SOGoVacationEnabled = YES;
+	SOGoEnableEMailAlarms = YES;
 	SOGoForwardEnabled = YES;
 	SOGoSieveScriptsEnabled = YES;
 	SOGoMailAuxiliaryUserAccountsEnabled = YES;
