Create local sieve master for sogo-tool update-autoreply

--- a/90-sieve.conf
+++ b/90-sieve.conf
@@ -21,3 +21,13 @@ plugin {
 	stats_refresh = 30 secs
 	stats_track_cmds = yes
 }
+
+passdb {
+	driver = passwd-file
+	master = yes
+	args = username_format=%u /etc/dovecot/master.%s
+}
+userdb {
+	driver = passwd-file
+	args = username_format=%u /etc/dovecot/master.%s
+}
